# Halting-Criterion

./: .gitignore  MAZE_RUNBOOK.md  README.md  app_infer.py  app_logs.py  inference.py  pyproject.toml  run.py  streamlit_inference_viewer.py  streamlit_log_viewer.py  streamlit_parity_addition_curves.py  streamlit_parity_addition_inference.py  train.py
dataset/: build_maze_dataset.py  build_sudoku_dataset.py
src/: cli.py  data.py  dev_utils.py  gradient_health.py  model_factory.py  models.py  universal_transformer.py  ut_task_policy.py
tasks/: addition.py  babi.py  copy.py  copy_reverse.py  lambada.py  logic.py  parity.py  reverse.py  sort.py  string_addition.py  wmt14.py
